@@ -1,3 +1,10 @@
+2011-11-30  Csaba Osztrogonác  <ossy@webkit.org>
+
+        Unreviewed rolling out incorrect r101481.
+
+        * assembler/MIPSAssembler.h:
+        * assembler/MacroAssemblerMIPS.h:
+
 2011-11-30  Simon Hausmann  <simon.hausmann@nokia.com>
 
         Fix compilation with MingW.
